<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    >
    <string name="app_name">Sunshine</string>
    <string name="forecast_fragment_tag">FFTAG</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="shared_preferences_name" translatable="false">SunshineSettings</string>

    <string name="title_activity_settings">Settings</string>


    <string name="settings_location_name">Location</string>
    <string name="settings_location_key" translatable="false">location</string>
    <string name="settings_location_description">The city for which weather data will be loaded.</string>
    <string name="settings_location_default" translatable="false">Tokorozawa</string>


    <string name="settings_units_name">Temperature Units</string>
    <string name="settings_units_key" translatable="false">temperatureUnits</string>
    <string-array name="settings_units_entries">
        <item>Metric</item>
        <item>Imperial</item>
        <item>Kelvin</item>
        <item>Rankine</item>
        <item>Wacky</item>
    </string-array>
    <string-array name="settings_units_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="settings_units_description">Choose the units in which to display temperatures.</string>

    <string name="settings_units_default">1</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_degrees"><xliff:g id="temperature">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.objectivelyradical.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <string name="settings_notification_key" translate="false">settings_notifications_enabled</string>
    <string name="settings_notification_title">Send Notifications</string>
    <string name="settings_notification_default" translate="false">true</string>
    <string name="settings_notification_on">Enabled</string>
    <string name="settings_notification_off">Disabled</string>
</resources>
