<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/settings_location_key"
        android:title="@string/settings_location_name"
        android:summary="@string/settings_location_description"
        android:defaultValue="@string/settings_location_default"

        />

    <ListPreference
        android:key="@string/settings_units_key"
        android:title="@string/settings_units_name"
        android:entries="@array/settings_units_entries"
        android:entryValues="@array/settings_units_entry_values"
        android:summary="@string/settings_units_description"
        android:defaultValue="@string/settings_units_default"

        />

    <CheckBoxPreference
        android:key="@string/settings_notification_key"
        android:title="@string/settings_notification_title"
        android:defaultValue="@string/settings_notification_default"
        android:summaryOn="@string/settings_notification_on"
        android:summaryOff="@string/settings_notification_off"
        />



</PreferenceScreen>
